# idek

./: .gitignore  Cargo.toml  README.md
engine/: .gitignore  README.md
engine/examples/: custom.frag.spv  dancing_cubes.rs  triangle.rs  triangle_wiggly.rs
engine/examples/examples/: dancing_cubes_custom_shader.rs
engine/src/: engine.rs
engine/src/shaders/: compile-shaders.sh  unlit.vert.spv  unlit_tex.frag  unlit_tex.frag.spv
examples/: args.rs  blend_cube.rs  compile_shaders.ps1  compile_shaders.sh  cube.rs  custom.frag  custom.frag.spv  dancing_cubes.rs  dancing_cubes_custom_shader.rs  fullscreen_quad.rs  image.rs  live_update.rs  triangle.rs  triangle_wiggly.rs
lyon/: Cargo.toml
lyon/examples/: hello_world.rs
lyon/src/: lib.rs
src/: draw_cmd.rs  engine.rs  lib.rs
src/shaders/: unlit.frag  unlit.frag.spv  unlit.vert  unlit.vert.spv  unlit_tex.frag.spv
