[package]
name = "idek"
version = "0.1.0"
edition = "2018"

[features]
default = []
openxr = ["watertender/openxr"]
#shaderc

[dependencies]
anyhow = "1"
watertender = { git = "https://github.com/Masterchef365/watertender.git", rev = "78ffe67be" }
#watertender = { path = "../watertender" }
bytemuck = "1.5"
slotmap = "1.0"